[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canbus-mcp"
version = "0.1.0"
description = "CAN bus reverse engineering MCP server for automotive and motorsports"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-can>=4.3.0",
    "cantools>=39.0.0",
]

[project.scripts]
canbus-mcp = "canbus_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/canbus_mcp"]
